# rust-stuff

./: Cargo.toml  README.md
prisma/: schema.prisma
src/: main.rs
src/routes/: mod.rs
src/routes/auth/: mod.rs  register.rs
